--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.rocketmq.group=DEFAULT_PRODUCER_Test
 spring.rocketmq.producer.producers.test.topic=TOPIC-songshuang
 spring.rocketmq.consumer.consumers.test.topic=TOPIC-songshuang
 spring.rocketmq.consumer.consumers.test.tag=test-tags
+
+annotation.config.url=hello
