--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.rocketmq.consumer.consumers.test.topic=TOPIC-songshuang
 spring.rocketmq.consumer.consumers.test.tag=test-tags
 
 annotation.config.url=hello
+
+spring.kafka.bootstrap-servers=172.16.9.184:9095, 172.16.9.184:9096, 172.16.9.184:9097
+spring.kafka.consumer.group-id=soundbox-group
+spring.kafka.producer.client-id=soundbox-producer
+spring.kafka.consumer.client-id=soundbox-producer
