--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+			<version>5.1.3.RELEASE</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.soundbox.log</groupId>
 			<artifactId>annotation-processor</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
