--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,15 @@
 
 	<dependencies>
 
+		<!-- google jsnappy压缩 -->
+		<dependency>
+			<groupId>org.xerial.snappy</groupId>
+			<artifactId>snappy-java</artifactId>
+			<version>1.1.7.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>io.lettuce</groupId>
 			<artifactId>lettuce-core</artifactId>
