--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,17 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>1.5.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy-agent</artifactId>
+			<version>1.5.7</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.javassist</groupId>
